--- a/InflationMeter/src/main/webapp/app/layouts/main/main.component.html
+++ b/InflationMeter/src/main/webapp/app/layouts/main/main.component.html
@@ -8,6 +8,6 @@
   <div class="card jh-card">
     <router-outlet></router-outlet>
   </div>
-
+<jhi-inflation></jhi-inflation>
   <jhi-footer></jhi-footer>
 </div>
