Added view of list products and remove jhipster main page

--- a/InflationMeter/src/main/webapp/app/layouts/inflation/inflation.component.html
+++ b/InflationMeter/src/main/webapp/app/layouts/inflation/inflation.component.html
@@ -1,1 +1,58 @@
 <p>inflation works!</p>
+
+  <form id="XForm" method="post" action="#"></form>
+  <div id="XBody" style="z-index:1000">
+   <div>
+    <div>
+     <div id="WE060fb9a3ac"  style="z-index:1001">
+      <div>
+       <div>
+        <div id="WEc76c7a7695" style="z-index:1001">
+         <div>
+        <label class="form-label" style="margin-top: 20px;" >Products: </label>
+          <select class="form-control" name="WEc76c7a7695" >
+           <option value="Field value" selected="selected">Field text</option>
+           <option value="Field value" >Field text</option>
+          </select>
+         </div>
+        </div>
+        <div id="WEf944aa8834" style="z-index:1003">
+         <div>
+          <label class="form-label" style="margin-top: 20px;" >Range: </label>
+            <input class="form-control" name="WEf944aa8834" type="text" />
+         </div>
+        </div>
+        <div id="WE891dee6e34" style="z-index:1002">
+         <div >
+          <button class="btn btn-primary" type="button" name="WE891dee6e34" style="margin-top: 20px;">Add product</button>
+         </div>
+        </div>
+        <div id="WE3338eedd01" style="z-index:1004">
+         <div>
+          <table class="table table-striped table-bordered table-responsive d-table">
+           <tr >
+            <td class="text-end">
+             <span class="MaxBox">&nbsp;</span>
+            </td>
+            <td class="text-end">
+             <span class="MaxBox">&nbsp;</span>
+            </td>
+           </tr>
+           <tr >
+            <td class="text-end">
+             <span class="MaxBox">&nbsp;</span>
+            </td>
+            <td class="text-end">
+             <span class="MaxBox">&nbsp;</span>
+            </td>
+           </tr>
+          </table>
+         </div>
+        </div>
+       </div>
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+  <p>inflation works!</p>
