--- a/InflationMeter/src/main/webapp/app/layouts/main/main.component.html
+++ b/InflationMeter/src/main/webapp/app/layouts/main/main.component.html
@@ -5,9 +5,11 @@
 </div>
 
 <div class="container-fluid">
-  <!-- <div class="card jh-card">
+  <div class="card jh-card">
     <router-outlet></router-outlet>
-  </div> -->
+  </div> 
 <jhi-inflation></jhi-inflation>
+
+
   <jhi-footer></jhi-footer>
 </div>
